# PREreviewClawer

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  README_prereview_crawler_production.md  main.py  pipeline_stages.py  prereview_crawler_production.py  pyproject.toml  requirements_prereview_crawler.txt  test_prereview_crawler_production.py
notebooks/: prereview_pipeline.ipynb
scripts/: 01_collect_reviews.py  02_enrich_metadata.py  03_build_dataset.py  04_validate_dataset.py  run_pipeline.py
tests/: test_pipeline_stages.py
