[project]
name = "previewclawer"
version = "0.3.0"
description = "A staged PREreview and Zenodo peer-review data pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "PyMuPDF>=1.24",
]

[project.optional-dependencies]
notebook = [
  "jupyterlab>=4.2",
  "ipykernel>=6.29",
]

[tool.uv]
package = false
